--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,9 @@
 
               <%= f.input :organization %>
               <%= f.input :position %>
-              <%= f.input :work_experience %>
+              <%= f.input :work_experience,
+                          placeholder: '4 года'
+              %>
               <%= f.input :organization_site %>
 
               <hr>
