--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -20,6 +20,7 @@ $navbar-inverse-bg: rgba(0, 0, 0, .6);
 $navbar-inverse-link-color: #fff;
 $navbar-inverse-link-hover-color: #ffcc00;
 $navbar-inverse-link-active-bg: transparent;
+$navbar-border-radius: 0;
 
 $text-color: #000000;
 $text-muted: #666666;
