--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -1,28 +1,28 @@
-
-
 <a href="http://sungate-ru.rixos.com/" class="general-partner" target="_blank"></a>
 
-<section class="partners partners_1">
-  <div class="partners-title">
-    ОРГАНИЗАТОРЫ
-  </div>
-  <div class="partners-links">
-    <a
-    class="partners-link"
-    href="http://www.travelstartups.ru/"
-    target="_blank"
-    >
-      <%= image_tag(asset_pack_path('travel-startups.svg'), size: "308x35", alt: "Travel Startups - сообщество тревел предпринимателей") %>
-    </a>
-    <a
-    class="partners-link"
-    href="http://www.onlinetours.ru/"
-    target="_blank"
-    >
-      <%= image_tag(asset_pack_path('logo-onlinetours@2x.png'), size: "272x48", alt: "Onlinetours") %>
-    </a>
-  </div>
-</section>
+<div class="container">
+  <section class="partners partners_1">
+    <div class="partners-title">
+      ОРГАНИЗАТОРЫ
+    </div>
+    <div class="partners-links">
+      <a
+      class="partners-link"
+      href="http://www.travelstartups.ru/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('travel-startups.svg'), size: "308x35", alt: "Travel Startups - сообщество тревел предпринимателей") %>
+      </a>
+      <a
+      class="partners-link"
+      href="http://www.onlinetours.ru/"
+      target="_blank"
+      >
+        <%= image_tag(asset_pack_path('logo-onlinetours@2x.png'), size: "272x48", alt: "Onlinetours") %>
+      </a>
+    </div>
+  </section>
+</div>
 
 <section class="partners">
   <div class="partners-title">
