--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -198,12 +198,12 @@
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	margin: 0 -30px;
+	margin: 0;
 }
 
 .jury-item {
 	//width: 220px;
-	margin: 0 30px;
+	margin: 0 20px;
 }
 
 .jury-item-photo {
