--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,4 +1,7 @@
-<div class="container" style="padding: 50px 0">
+<div class="container content-container" style="padding: 20px 20px 100px">
+  <h1 style="margin-bottom: 50px" class="text-center">
+    Голосуй за Мисс Туризм!
+  </h1>
   <div class="row">
     <%- @users.each do |user| %>
       <%- root_photo = user.photos.present? ? user.photos.find_by(root: true) : nil %>
