--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-body">
+<div class="container container-body content-container">
   <div class="row">
     <h3>Users</h3>
     <div class="column">
