--- a/app/javascript/packs/app-styles.scss
+++ b/app/javascript/packs/app-styles.scss
@@ -10,6 +10,8 @@
 @import "votes";
 @import "owl/assets/owl.carousel";
 @import "owl/assets/owl.theme.default";
+@import 'lightgallery/lightgallery/dist/css/lightgallery';
+@import 'lightgallery/lightgallery/dist/css/lg-transitions';
 
 .alert {
 	margin: 15px 0;
