--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -102,6 +102,19 @@
 	margin: 0 0 24px;
 }
 
+.profile-photos-zoom {
+	display: none;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	z-index: 4;
+	opacity: 0;
+	margin-left: -15px;
+	margin-top: -15px;
+	color: #fff;
+	transition: all 200ms ease-in-out;
+}
+
 .profile-photo-root {
 	box-sizing: border-box;
 	position: relative;
@@ -109,6 +122,16 @@
 	width: 450px;
 	border-radius: 4px;
 	border: 4px solid #ffcc00;
+
+	&:hover {
+		.profile-photos-zoom {
+			display: block;
+			opacity: 1;
+		}
+		&:before {
+			background-color: rgba(0, 0, 0, .4);
+		}
+	}
 
 	&:before {
 		content: '';
@@ -120,6 +143,7 @@
 		left: 0;
 		right: 0;
 		background-color: rgba(0, 0, 0, .25);
+		transition: all 200ms ease-in-out;
 	}
 
 	img {
@@ -165,6 +189,17 @@
 		right: 0;
 		background-color: rgba(0, 0, 0, .25);
 		border-radius: 4px;
+		transition: all 200ms ease-in-out;
+	}
+
+	&:hover {
+		.profile-photos-zoom {
+			display: block;
+			opacity: 1;
+		}
+		&:before {
+			background-color: rgba(0, 0, 0, .4);
+		}
 	}
 
 	img {
@@ -197,7 +232,7 @@
 .profile-social {
 	margin: 100px 0 0;
 
-	.b-sign-in-buttons{
+	.b-sign-in-buttons {
 		padding: 0;
 	}
 }
