--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -1,6 +1,6 @@
 <a href="http://sungate-ru.rixos.com/" class="general-partner" target="_blank"></a>
 
-<div class="container">
+<div class="container" style="padding: 0">
   <section class="partners partners_1">
     <div class="partners-title">
       ОРГАНИЗАТОРЫ
