--- a/app/javascript/packs/_profile.scss
+++ b/app/javascript/packs/_profile.scss
@@ -11,14 +11,35 @@
 	font-size: 20px;
 	text-align: left;
 	color: #000000;
+
+	@media (max-width: 662px) {
+		margin: 16px 0;
+		font-size: 16px;
+		line-height: 24px;
+		flex-direction: column;
+		text-align: center;
+	}
 }
 
 .profile-container {
 	display: flex;
+
+	@media (max-width: 1024px) {
+		display: block;
+	}
+}
+
+.profile-info-col {
+	flex-grow: 2;
 }
 
 .profile-photos-col {
+	flex-grow: 0;
 	margin-right: 20px;
+
+	@media (max-width: 662px) {
+		margin: 0;
+	}
 }
 
 .profile-p {
@@ -100,6 +121,14 @@
 .profile-photos {
 	display: flex;
 	margin: 0 0 24px;
+
+	@media (max-width: 1024px) {
+		justify-content: center;
+	}
+	@media (max-width: 662px) {
+		flex-direction: column;
+		align-items: center;
+	}
 }
 
 .profile-photos-zoom {
@@ -122,6 +151,10 @@
 	width: 450px;
 	border-radius: 4px;
 	border: 4px solid #ffcc00;
+
+	@media (max-width: 662px) {
+		width: 100%;
+	}
 
 	&:hover {
 		.profile-photos-zoom {
@@ -165,6 +198,11 @@
 
 .profile-photos-thumb {
 	margin-left: 4px;
+
+	@media (max-width: 662px) {
+		margin: 4px 0 0 0;
+		display: flex;
+	}
 }
 
 .profile-photo {
@@ -205,6 +243,18 @@
 	img {
 		border-radius: 4px;
 	}
+
+	@media (max-width: 662px) {
+		width: auto;
+		margin: 0 0 0 3px;
+
+		&:first-child {
+			margin: 0;
+		}
+		&:last-child {
+			margin: 0 0 0 3px;
+		}
+	}
 }
 
 .profile-photo-actions {
@@ -242,4 +292,42 @@
 	text-align: center;
 	color: #000000;
 	margin: 0 0 28px;
+}
+
+.votes-block {
+	margin: 0 0 32px;
+}
+
+.votes-block-pager {
+	display: flex;
+	justify-content: space-between;
+	margin: 0 0 16px;
+}
+
+.vote-btn {
+	display: block;
+	height: 64px;
+	padding: 16px 0;
+	border-radius: 4px;
+	background-image: linear-gradient(to bottom, #ffe800, #ffcc00);
+	box-shadow: 0 4px 0 0 rgba(0, 0, 0, 0.15);
+
+	font-size: 22px;
+	font-weight: bold;
+	letter-spacing: 1.1px;
+	text-align: center;
+	color: #000000 !important;
+	text-decoration: none !important;
+	text-transform: uppercase;
+
+	@media (max-width: 662px) {
+		height: auto;
+		padding: 13px 0;
+		font-size: 16px;
+		letter-spacing: 0;
+
+		img{
+			margin: 5px 0 0 0;
+		}
+	}
 }
