--- a/app/javascript/packs/_votes.scss
+++ b/app/javascript/packs/_votes.scss
@@ -8,10 +8,28 @@
 }
 
 .anketa-item-img {
-	.img-responsive{
+	position: relative;
+	.img-responsive {
 		border-top-left-radius: 4px;
 		border-top-right-radius: 4px;
 	}
+}
+
+.anketa-item-count {
+	display: flex;
+	position: absolute;
+	right: 16px;
+	top: 16px;
+	padding: 10px 16px;
+	border-radius: 4px;
+	background-color: #fafafa;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: right;
+	color: #7b7b7b;
+}
+.anketa-item-count-value{
+	margin-right: 13px;
 }
 
 .anketa-item-name {
