--- a/app/views/shared/_anketa_mini.erb
+++ b/app/views/shared/_anketa_mini.erb
@@ -1,5 +1,11 @@
 <%= link_to user_path(user), class: "anketa-item" do %>
   <div class="anketa-item-img">
+    <div class="anketa-item-count">
+      <div class="anketa-item-count-value">
+        <%= user.votes %>
+      </div>
+      <%= image_tag asset_pack_path 'icon-like.svg' %>
+    </div>
     <%= image_tag photo.photo_src.middle, class: "img-responsive" %>
   </div>
   <div class="anketa-item-name">
