--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,27 +39,36 @@
         <%== render 'users/photos' %>
       </div>
       <div class="profile-info-col">
-        <%== render 'users/userinfo' %>
 
-        <div style="margin: 30px 0">
+        <div class="votes-block">
 
-          <div style="margin: 16px 0">
+          <div class="votes-block-pager">
             <%- if @user_prev %>
-              <%== link_to 'Предыдущая анкета', user_path(@user_prev), class: 'btn btn-default'%>
+              <%== link_to user_path(@user_prev), class: 'btn btn-default' do %>
+                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                &nbsp;
+                Предыдущая
+              <% end %>
             <% end %>
 
             <%- if @user_next %>
-              <%== link_to 'Следующая анкета', user_path(@user_next), class: 'btn btn-default' %>
+              <%== link_to user_path(@user_next), class: 'btn btn-default' do %>
+                Следующая
+                &nbsp;
+                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+              <% end %>
             <% end %>
           </div>
 
 
-          <% if user_signed_in? && VotesQuery.new.is_votes(current_user, @user.id) %>
+          <% if user_signed_in? && VotesQuery.new.is_votes(current_user, @user.number) %>
             <div class="vote-btn-container text-center">
-              <%== link_to 'Проголосовать за участницу',
-                           voteable_path(@user),
-                           remote: true,
-                           class: 'btn btn-success'%>
+              <%= link_to voteable_path(@user),
+                          class: 'vote-btn',
+                          remote: true do %>
+                Проголосовать за участницу
+                <%= image_tag asset_pack_path 'icon-like-red.svg' %>
+              <% end %>
             </div>
           <% else %>
             <div class="vote-btn-container text-center">
@@ -68,6 +77,8 @@
           <% end %>
         </div>
 
+
+        <%== render 'users/userinfo' %>
       </div>
     </div>
 
