--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <%- @users.each do |user| %>
       <%- root_photo = user.photos.present? ? user.photos.find_by(root: true) : nil %>
-      <div class="col-md-4">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
         <%= render partial: "shared/anketa_mini",
                    locals: {user: user,
                             photo: root_photo,
