--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,6 +2,12 @@
   <%= link_to user.name, user %>
   <br>
   <%= link_to user.email, user %>
+  <br>
+  <%= user.created_at.strftime("%d.%m.%Y %H:%M") %>
+  <br>
+  <%- if user.uid.present? %>
+    <%= link_to 'Профиль на fb', "https://fb.com/#{user.uid}", target: "_blank" %>
+  <% end %>
 </td>
 <td>
   <%= form_for(user) do |f| %>
