--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,8 +5,13 @@
   <br>
   <%= user.created_at.strftime("%d.%m.%Y %H:%M") %>
   <br>
-  <%- if user.uid.present? %>
-    <%= link_to 'Профиль на fb', "https://fb.com/#{user.uid}", target: "_blank" %>
+
+  <%- if user.profile.present? && user.uid.present? %>
+    <%= link_to "Профиль на #{user.provider}", user.profile, target: "_blank" %>
+  <% else %>
+    <%- if user.uid.present? %>
+      <%= link_to 'Профиль на fb', "https://fb.com/#{user.uid}", target: "_blank" %>
+    <% end %>
   <% end %>
 </td>
 <td>
