добавил код яндекс метрики

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,12 @@
   <%== javascript_pack_tag 'application' %>
 </head>
 <body>
+<%== render 'header/header' %>
+<%== render 'layouts/messages' %>
+<%== yield %>
+<%== render 'shared/organizator' %>
+<%== render 'layouts/footer' %>
+
 <!— Global Site Tag (gtag.js) - Google Analytics —>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39953962-1"></script>
 <script>
@@ -29,11 +35,37 @@
 
   gtag('config', 'UA-39953962-1');
 </script>
-<%== render 'header/header' %>
-<%== render 'layouts/messages' %>
-<%== yield %>
-<%== render 'shared/organizator' %>
-<%== render 'layouts/footer' %>
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+  (function (d, w, c) {
+    (w[c] = w[c] || []).push(function() {
+      try {
+        w.yaCounter45973884 = new Ya.Metrika({
+          id:45973884,
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true,
+          webvisor:true
+        });
+      } catch(e) { }
+    });
+
+    var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () { n.parentNode.insertBefore(s, n); };
+    s.type = "text/javascript";
+    s.async = true;
+    s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+    if (w.opera == "[object Opera]") {
+      d.addEventListener("DOMContentLoaded", f, false);
+    } else { f(); }
+  })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/45973884" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
+
 <%== render 'shared/socials' %>
 </body>
 </html>
