--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
 <div class="footer">
   <div class="container">
     <div class="copyright">
-      Copyright © 2017 «missturizm»
+      По вопросам участия в конкурсе и партнерства пишите на
+      <a href="mailto:privet@missturizm.ru">privet@missturizm.ru</a>
     </div>
   </div>
 </div>
