--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -15,7 +15,7 @@
 <div class="container content-container">
 
   <div class="home_top">
-    ТОП участниц
+    ПОПУЛЯРНЫЕ УЧАСТНИЦЫ
   </div>
 
   <div class="owl-carousel home-users">
@@ -54,7 +54,7 @@
       </div>
       <div class="heroes-item-text">
         Твоя красота затмит пейзажи Австралии, Доминиканы и Мальдив? Ты удивительна, как розовое
-        озеро в Синегале, и интересна, как фауна Мадагаскара?
+        озеро в Сенегале, и интересна, как фауна Мадагаскара?
       </div>
     </div>
 
@@ -132,10 +132,11 @@
     </div>
   </div>
 
-
-  <div class="etaps-date-info">
-    Даты могут быть скорректированы
-  </div>
+  <!--
+    <div class="etaps-date-info">
+      Даты могут быть скорректированы
+    </div>
+  -->
 
   <%- unless user_signed_in? %>
     <div class="home-action">
