--- a/app/javascript/packs/_votes.scss
+++ b/app/javascript/packs/_votes.scss
@@ -27,9 +27,25 @@
 	font-weight: bold;
 	text-align: right;
 	color: #7b7b7b;
+
+	@media (max-width: 768px) {
+		right: 8px;
+		top: 8px;
+		padding: 5px 8px;
+		font-size: 14px;
+
+		img{
+			width: 16px;
+		}
+	}
 }
 .anketa-item-count-value{
 	margin-right: 13px;
+
+	@media (max-width: 768px) {
+		margin-right: 7px;
+		padding-top: 1px;
+	}
 }
 
 .anketa-item-name {
@@ -45,4 +61,36 @@
 	font-size: 16px;
 	text-align: center;
 	color: #5d5d5d !important;
+}
+
+.votes-title{
+	margin-bottom: 50px;
+
+	@media (max-width: 580px) {
+		margin:10px 0 30px;
+		font-size: 24px;
+	}
+}
+
+.votes-users{
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -10px;
+
+	@media (max-width: 470px) {
+		margin: 0;
+	}
+}
+
+.votes-user{
+	width: calc((100% / 3) - 20px);
+	margin: 0 10px;
+
+	@media (max-width: 992px) {
+		width: calc((100% / 2) - 20px);
+	}
+	@media (max-width: 470px) {
+		width: 100%;
+		margin: 0;
+	}
 }
