--- a/app/javascript/packs/_votes.scss
+++ b/app/javascript/packs/_votes.scss
@@ -28,6 +28,14 @@
 	text-align: right;
 	color: #7b7b7b;
 
+	button{
+		background: none;
+		border: none;
+		outline: none;
+		padding: 0;
+		margin: 0;
+	}
+
 	@media (max-width: 768px) {
 		right: 8px;
 		top: 8px;
