--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -6,6 +6,13 @@
 	text-align: center;
 	color: #000000;
 	text-transform: uppercase;
+
+	@media (max-width: 768px){
+		font-size: 30px;
+	}
+	@media (max-width: 1280px){
+		font-size: 40px;
+	}
 }
 
 .home-users {
