--- a/app/javascript/packs/_vars.scss
+++ b/app/javascript/packs/_vars.scss
@@ -16,7 +16,7 @@ $padding-xs-vertical: 1px !default;
 $padding-xs-horizontal: 6px !default;
 
 $navbar-height: 90px;
-$navbar-inverse-bg: rgba(0, 0, 0, .6);
+$navbar-inverse-bg: rgba(1, 0, 4, 0.5);
 $navbar-inverse-link-color: #fff;
 $navbar-inverse-link-hover-color: #ffcc00;
 $navbar-inverse-link-active-bg: transparent;
