--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -5,7 +5,6 @@ header {
 	background-position: top center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	//border-bottom: 7px solid #ffcc00;
 
 	&:before {
 		content: '';
@@ -18,6 +17,13 @@ header {
 		bottom: 0;
 		background-color: rgba(0, 0, 0, .2);
 	}
+
+	@media (max-width: 1024px){
+		height: 540px;
+	}
+	@media (max-width: 768px){
+		height: 440px;
+	}
 }
 
 .header-collapse{
@@ -25,13 +31,43 @@ header {
 }
 
 .navbar {
-	z-index: 2;
+	z-index: 4;
+
+	@media (max-width: 768px){
+		min-height: 64px;
+	}
 }
 
 .navbar-brand {
 	padding: 12px 15px;
+
+	@media (max-width: 768px){
+		height: 64px;
+		img{
+			height: 40px;
+			vertical-align: top;
+		}
+	}
+}
+.navbar-collapse{
+	@media (max-width: 767px){
+		position: absolute;
+		left: 0;
+		top: 64px;
+		right: 0;
+		z-index: 3000;
+		padding-left: 30px;
+		padding-right: 30px;
+		background: $navbar-inverse-bg;
+	}
 }
 
+.navbar-toggle{
+	@media (max-width: 768px){
+		margin-top: 12px;
+		margin-bottom: 12px;
+	}
+}
 .navbar-inverse .navbar-nav {
 	& > li {
 		& > a {
@@ -66,6 +102,22 @@ header {
 	text-align: center;
 	color: #ffffff;
 	text-shadow: 0 4px 7px rgba(0, 0, 0, 0.27);
+
+	@media (max-width: 1280px){
+		font-size: 66px;
+	}
+	@media (max-width: 1024px){
+		margin: 100px 0 60px;
+		font-size: 56px;
+	}
+	@media (max-width: 768px){
+		margin: 80px 0 50px;
+		font-size: 36px;
+	}
+	@media (max-width: 480px){
+		margin: 60px 0 40px;
+		font-size: 30px;
+	}
 }
 
 .header-buttons{
@@ -92,6 +144,10 @@ header {
 	text-align: center;
 	color: #ffffff;
 	text-shadow: 0 6px 7px rgba(0, 0, 0, 0.27);
+
+	@media (max-width: 768px){
+		font-size: 20px;
+	}
 }
 
 .b-sign-in-buttons {
@@ -99,6 +155,10 @@ header {
 	flex-direction: row;
 	justify-content: center;
 	padding: 50px 0;
+
+	@media (max-width: 768px){
+		padding: 30px 0 0;
+	}
 }
 
 .b-sign-in-button {
@@ -113,6 +173,20 @@ header {
 	font-weight: 600;
 	color: #ffffff;
 	text-align: center;
+
+	img{
+		vertical-align: top;
+	}
+
+	@media (max-width: 768px){
+		height: 42px;
+		padding: 10px 0;
+		font-size: 16px;
+
+		img{
+			height: 18px;
+		}
+	}
 }
 .b-sign-in-button-vk {
 	background-color: #4f719b;
@@ -124,6 +198,10 @@ header {
 	}
 	span{
 		display: inline-block;
-		padding-top: 5px;
+		padding-top: 3px;
+
+		@media (max-width: 768px){
+			padding-top: 1px;
+		}
 	}
 }
