--- a/app/javascript/packs/_header.scss
+++ b/app/javascript/packs/_header.scss
@@ -58,7 +58,7 @@ header {
 		z-index: 3000;
 		padding-left: 30px;
 		padding-right: 30px;
-		background: $navbar-inverse-bg;
+		background: rgba(1, 0, 4, 0.5);
 	}
 }
 
