--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -33,7 +33,7 @@
 
   <%= link_to 'Все участницы', votes_path, class: "btn-votes" %>
 
-  <h1 class="home-title">
+  <h1 class="home-title" id="about">
     <div class="home-title-slogan">
       Конкурс красоты cотрудниц туриндустрии
     </div>
@@ -147,7 +147,7 @@
   <% end %>
 
 
-  <div class="home-subtitle jury-list-title">
+  <div class="home-subtitle jury-list-title" id="jury">
     Жюри конкурса
   </div>
 
