--- a/app/javascript/packs/_organizator.scss
+++ b/app/javascript/packs/_organizator.scss
@@ -6,31 +6,56 @@
 	background-size: cover;
 	background-position: center;
 
-	@media (max-width: 1400px){
+	@media (max-width: 1400px) {
 		height: 600px;
 	}
-	@media (max-width: 1280px){
+	@media (max-width: 1280px) {
 		height: 600px;
 	}
-	@media (max-width: 1024px){
+	@media (max-width: 1024px) {
 		height: 480px;
 	}
-	@media (max-width: 768px){
+	@media (max-width: 768px) {
 		height: 380px;
 	}
-	@media (max-width: 400px){
+	@media (max-width: 400px) {
 		height: 300px;
 	}
 }
 
-.partners {
+.partners-container {
 	padding: 32px 0;
 	background-color: #fafafa;
 }
-.partners_1{
-	padding: 100px 0;
-	background-color: #fff;
-	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+
+.partners-container-flex {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+
+	@media (max-width: 1200px) {
+		justify-content: center;
+	}
+}
+
+.partners {
+	padding-bottom: 63px;
+	margin: 0 30px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+
+	&:first-child {
+		margin-left: 0;
+	}
+
+	@media (max-width: 1200px) {
+		padding-bottom: 30px;
+	}
+	@media (max-width: 1024px) {
+		margin: 0;
+	}
 }
 
 .partners-title {
@@ -50,12 +75,68 @@
 	flex-wrap: wrap;
 }
 
+.partners-links-2{
+	//justify-content: space-between;
+	.partners-link{
+		margin: 0 15px 24px;
+	}
+}
+
+.partners-links-2-border{
+	padding-right: 60px;
+	border-right: solid 1px #979797;
+
+	@media (max-width: 1200px) {
+		border-right: none;
+		padding-right: 0;
+		padding-bottom: 10px;
+		border-bottom: solid 1px #979797;
+	}
+}
+
 .partners-link {
 	display: inline-block;
-	margin: 0 24px;
+	margin: 0 15px;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 1.33;
 	text-align: center;
 	color: #000000;
+
+	&:first-child {
+		margin-left: 0;
+	}
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+.partner-bronevik {
+	font-size: 26px;
+	font-weight: bold;
+	line-height: 0.92;
+	text-align: center;
+	color: #000000;
+}
+
+.partners_1 {
+	margin: 0;
+	padding: 100px 0 50px !important;
+	background-color: #fff;
+	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+
+	@media (max-width: 992px) {
+		padding: 60px 0 30px;
+	}
+}
+
+.partners-link-1 {
+	margin: 0 50px 50px;
+
+	@media (max-width: 992px) {
+		margin: 0 50px 30px !important;
+	}
+	@media (max-width: 768px) {
+		//margin: 0 0px 30px !important;
+	}
 }
