--- a/app/javascript/packs/_footer.scss
+++ b/app/javascript/packs/_footer.scss
@@ -8,8 +8,8 @@
 	background-color: #000000;
 }
 .copyright {
-	font-size: 16px;
-	letter-spacing: 0.9px;
+	font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif;
+	font-size: 14px;
 	text-align: right;
 	color: #ffffff;
 }
