--- a/app/javascript/packs/_home.scss
+++ b/app/javascript/packs/_home.scss
@@ -73,7 +73,7 @@
 	margin: 40px auto;
 	padding: 15px 0;
 	border-radius: 100px;
-	background-color: $btn-success-bg;
+	background-color: #ffcc00;
 	font-size: 18px;
 	font-weight: bold;
 	text-align: center;
