--- a/app/views/shared/_organizator.erb
+++ b/app/views/shared/_organizator.erb
@@ -72,9 +72,7 @@
         target="_blank"
         style="margin-top: 14px"
         >
-        <span class="partner-bronevik">
-          БРОНЕВИК
-        </span>
+          <%= image_tag(asset_pack_path('bronevik.png'), size: "200x56", alt: "iway") %>
         </a>
       </div>
     </section>
