--- a/app/views/users/_userinfo.erb
+++ b/app/views/users/_userinfo.erb
@@ -1,14 +1,43 @@
-<div class="profile-created">
-  <div class="profile-created-data">
-    <span class="text-muted">Дата размещения анкеты:</span>
-    <%= @user.created_at.present? && @user.created_at.strftime("%d.%m.%Y") %>
-  </div>
-
-  <% if user_signed_in? && policy(@user).profile? %>
+<% if user_signed_in? && policy(@user).profile? %>
+  <div class="profile-created">
     <%= link_to edit_user_path(@user), class: 'profile-edit-link' do %>
-      <span class="profile-edit-link__label">Редактировать</span>
+      <span class="profile-edit-link__label">Редактировать анкету</span>
       <i class="profile-edit-link__icon fa fa-cog" aria-hidden="true"></i>
     <% end %>
+  </div>
+<% end %>
+
+<div class="profile-social">
+  <div class="profile-social-title">
+    Поделитесь с друзьями:
+  </div>
+  <div class="ya-share2" data-services="collections,vkontakte,facebook" data-counter=""></div>
+</div>
+
+
+<h1 class="profile-title">
+  <%= @user.name %>
+</h1>
+<div class="profile-info" style="margin-bottom: 40px">
+  <%- if @user.age.present? %>
+    <div class="profile-info-item">
+      <div class="profile-label">
+        Возраст
+      </div>
+      <div class="profile-info-item-body">
+        <%= t('datetime.distance_in_words.x_years', count: @user.age, locale: :ru) %>
+      </div>
+    </div>
+  <% end %>
+  <%- if @user.location.present? %>
+    <div class="profile-info-item">
+      <div class="profile-label">
+        Город
+      </div>
+      <div class="profile-info-item-body">
+        <%= @user.location %>
+      </div>
+    </div>
   <% end %>
 </div>
 
@@ -54,21 +83,7 @@
   </div>
 <% end %>
 
-<h1 class="profile-title">
-  <%= @user.name %>
-</h1>
-<%- if @user.age.present? %>
-  <div class="profile-info" style="margin-bottom: 40px">
-    <div class="profile-info-item">
-      <div class="profile-label">
-        Возраст
-      </div>
-      <div class="profile-info-item-body">
-        <%= t('datetime.distance_in_words.x_years', count: @user.age, locale: :ru) %>
-      </div>
-    </div>
-  </div>
-<% end %>
+
 
 <%- if @user.about.present? %>
   <div class="profile-info" style="margin-top: 40px">
@@ -82,6 +97,12 @@
     </div>
   </div>
 <% end %>
+
+
+<div class="profile-created-data">
+  <span class="text-muted">Дата размещения анкеты:</span>
+  <%= @user.created_at.present? && @user.created_at.strftime("%d.%m.%Y") %>
+</div>
 
 <% if user_signed_in? && policy(@user).profile? %>
   <div class="text-muted" style="margin-bottom: 32px">
