--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </title>
   <meta name="description" content="<%== content_for?(:description) ?
                                             yield(:description) :
-                                            'Конкурс красоты cотрудниц индустрии туризма Мисс Туризм 2017.' %>" />
+                                            'Конкурс красоты представительниц индустрии туризма Мисс Туризм 2017.' %>" />
 
   <%= yield :og %>
   <%== csrf_meta_tags %>
