--- a/app/views/pages/home.erb
+++ b/app/views/pages/home.erb
@@ -2,12 +2,12 @@
   Мисс Туризм 2017
 <%- end %>
 <%- content_for :description do %>
-  Конкурс красоты cотрудниц индустрии туризма Мисс Туризм 2017.
+  Конкурс красоты представительниц индустрии туризма Мисс Туризм 2017.
 <%- end %>
 
 <%= render partial: "shared/meta_og",
            locals: {title: "Мисс Туризм Россия 2017",
-                    desc: "Конкурс красоты сотрудников индустрии туризма Мисс Туризм Россия 2017.",
+                    desc: "Конкурс красоты представительниц индустрии туризма Мисс Туризм Россия 2017.",
                     photo: nil
            }
 %>
@@ -35,7 +35,7 @@
 
   <h1 class="home-title" id="about">
     <div class="home-title-slogan">
-      Конкурс красоты cотрудниц туриндустрии
+      Конкурс красоты представительниц туриндустрии
     </div>
     <div class="home-title-text">
       Мисс Туризм 2017
